src/alto-ui/Dropdown/components/DropdownItem/DropdownItem.scss
@import '../../../scss/inc';

.DropdownItem {
  display: flex;
  align-items: center;
}

.DropdownItem__button {
  @extend %reset-button;
  @extend %focusable;
  cursor: pointer;
  display: flex;
  align-items: center;
  color: $coolgrey-60;
  padding: $spacing-x-small $spacing-small;
  background-color: $white;
  border-radius: $border-radius-default;

  &:hover,
  &--active {
    background-color: $coolgrey-20;
    color: $coolgrey-70;
  }

  &--selected,
  &--selected:hover {
    font-weight: $font-weight-semibold;
    color: $blue;
    background-color: $white;
  }

  &--disabled,
  &--disabled:hover {
    color: $coolgrey-40;
    text-decoration: line-through;
    background-color: $white;
  }
}
.DropdownItem__button--main {
  flex-grow: 1;
}

.DropdownItem__checkbox {
  margin: 0 $spacing-small;
}

.DropdownItem__button-title {
  flex-grow: 1;
}

